--- a/cats.qmd
+++ b/cats.qmd
@@ -63,7 +63,7 @@ _Wondering where the photos are? Chester and Leo got into the code again._
 
 # More Fluff
 
-<!-- Embed an external quiz page using an iframe -->
+<!-- Embed quiz page using an iframe -->
 <iframe src="quiz.html" width="100%" height="700" style="border:none;"></iframe>
 
 ---
